--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.datasource.password=1234
 mybatis.config-location=classpath:mybatis/myBatisConfig.xml
 mybatis.type-aliases-package=com.mulcam.ai.web.vo
 
+#file size limit
+spring.servlet.multipart.maxFileSize=10MB
+spring.servlet.multipart.maxRequestSize=10MB
+
+
